--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
 
     <footer>Hecho con amor en Platzi por @juandc</footer>
 
-    <script type="module" src="./src/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script  src="./src/main.js"></script>
+    <script  src="./src/navigation.js"></script>
 </body>
 
 </html>
