chore: show and hide section by pages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="./styles/app.css">
     <title>Mister Movies v1</title>
+
+
 </head>
 
 <body>
@@ -22,7 +24,7 @@
 
         <form id="searchForm" class="header-searchForm">
             <input type="text" placeholder="Vengadores" />
-            <button>🔍</button>
+            <button id="searchBtn">🔍</button>
         </form>
     </header>
 
@@ -120,9 +122,11 @@
         </article>
     </section>
 
-    <footer>Hecho con amor en Platzi por @juandc</footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <footer>Code by Mister Dan</footer>
+    
+    <script  src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./src/secrets.js"></script>
+    <script  src="./src/nodes.js"></script>
     <script  src="./src/main.js"></script>
     <script  src="./src/navigation.js"></script>
 </body>
