--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
     </section>
 
     <footer>Code by Mister Dan</footer>
+
+    <button class="scroll-btn">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
+          </svg>
+          
+    </button>
     
     <script  src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./src/secrets.js"></script>
