feat: add loading skeleton html elements and css styles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="header-title header-title--categoryView inactive">Acción</h1>
 
         <form id="searchForm" class="header-searchForm">
-            <input type="text" placeholder="Vengadores" />
+            <input type="text" placeholder="Search a movie..." />
             <button id="searchBtn">🔍</button>
         </form>
     </header>
@@ -35,20 +35,47 @@
         </div>
 
         <article class="trendingPreview-movieList">
-            <!-- <div class="movie-container">
-                <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" class="movie-img"
-                    alt="Nombre de la película" />
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
             </div>
 
             <div class="movie-container">
-                <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" class="movie-img"
-                    alt="Nombre de la película" />
+                <div class="movie-img loading" ></div>
             </div>
 
             <div class="movie-container">
-                <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" class="movie-img"
-                    alt="Nombre de la película" />
-            </div> -->
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+            </div>
         </article>
     </section>
 
@@ -56,9 +83,34 @@
         <h2 class="categoriesPreview-title">Categorías</h2>
 
         <article class="categoriesPreview-list">
-            <!-- <div class="category-container">
-                <h3 id="id28" class="category-title">Romance</h3>
-            </div> -->
+            <div class="category-container loading">
+                <h3 class="category-title loading"></h3>
+            </div>
+            <div class="category-container loading">
+                <h3 class="category-title loading"></h3>
+            </div>
+            <div class="category-container loading">
+                <h3 class="category-title loading"></h3>
+            </div>
+            <div class="category-container loading">
+                <h3 class="category-title loading"></h3>
+            </div>
+            <div class="category-container loading">
+                <h3 class="category-title loading"></h3>
+            </div>
+            <div class="category-container loading">
+                <h3 class="category-title loading"></h3>
+            </div>
+            <div class="category-container loading">
+                <h3 class="category-title loading"></h3>
+            </div>
+            <div class="category-container loading">
+                <h3 class="category-title loading"></h3>
+            </div>
+            <div class="category-container loading">
+                <h3 class="category-title loading"></h3>
+            </div>
+
         </article>
     </section>
 
@@ -105,18 +157,16 @@
 
             <div class="relatedMovies-scrollContainer">
                 <div class="movie-container">
-                    <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" class="movie-img"
-                        alt="Nombre de la película" />
+                    <div class="movie-img loading" ></div>
                 </div>
-
                 <div class="movie-container">
-                    <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" class="movie-img"
-                        alt="Nombre de la película" />
+                    <div class="movie-img loading" ></div>
                 </div>
-
                 <div class="movie-container">
-                    <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" class="movie-img"
-                        alt="Nombre de la película" />
+                    <div class="movie-img loading" ></div>
+                </div>
+                <div class="movie-container">
+                    <div class="movie-img loading" ></div>
                 </div>
             </div>
         </article>
@@ -132,7 +182,7 @@
     </button>
     
     <script  src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./src/secrets.js"></script>
+    <script  src="./src/secrets.js"></script>
     <script  src="./src/nodes.js"></script>
     <script  src="./src/main.js"></script>
     <script  src="./src/navigation.js"></script>
