--- a/index.html
+++ b/index.html
@@ -114,6 +114,56 @@
         </article>
     </section>
 
+    <section id="liked" class="liked-container">
+        <div class="liked-header">
+            <h2 class="liked-title">Peliculas Favoritas</h2>
+        </div>
+
+        <article class="liked-movieList">
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+
+            <div class="movie-container">
+                <div class="movie-img loading" ></div>
+            </div>
+            </div>
+        </article>
+    </section>
+
     <section id="genericList" class="genericList-container inactive">
         <!-- <div class="movie-container">
             <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" class="movie-img"
